<resources>
    <string name="app_name">UPSC</string>
    <string name="dummy_text_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo elit quis nibh tempus, at imperdiet mi dignissim. Sed a efficitur nisl.</string>
    <string name="dummy_text_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo elit quis nibh tempus, at imperdiet mi dignissim. Sed a efficitur nisl. Donec dictum, eros eu hendrerit venenatis, sapien felis ultricies mauris, sit amet elementum sapien diam nec leo. Morbi ac nisl in odio lobortis cursus. Aliquam nulla odio, accumsan quis orci eget, consectetur ullamcorper ante. Mauris tellus mauris, blandit sed neque et, placerat volutpat est. Morbi sagittis volutpat nulla eget imperdiet. Sed et nibh imperdiet, tincidunt ex vitae, consectetur nibh.</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo elit quis nibh tempus, at imperdiet mi dignissim. Sed a efficitur nisl. Donec dictum, eros eu hendrerit venenatis, sapien felis ultricies mauris, sit amet elementum sapien diam nec leo. Morbi ac nisl in odio lobortis cursus. Aliquam nulla odio, accumsan quis orci eget, consectetur ullamcorper ante. Mauris tellus mauris, blandit sed neque et, placerat volutpat est. Morbi sagittis volutpat nulla eget imperdiet. Sed et nibh imperdiet, tincidunt ex vitae, consectetur nibh. Quisque vitae ante eget diam semper rhoncus. Etiam vel risus in risus condimentum feugiat. Aliquam sollicitudin dignissim ipsum. Sed nisi nisi, efficitur ut eros eget, consequat condimentum urna. Aliquam eu neque sit amet est sagittis pharetra. Mauris ac molestie mi. Praesent rutrum mi quis ante rhoncus ornare. Nunc in massa ut lectus vulputate condimentum ac at ipsum. In at rutrum ante, in posuere turpis. Donec ut luctus nisl. Sed laoreet nisi vel vestibulum viverra. Duis tincidunt, ligula sit amet convallis tristique, purus sapien finibus turpis, vitae fringilla ex tortor vel nulla. Sed dignissim diam id accumsan elementum. Nulla pellentesque egestas tellus, a bibendum turpis aliquam pulvinar. Duis eget dui vel mi fermentum blandit. Proin placerat finibus dolor, nec interdum nunc posuere non. Morbi in nunc sem. Donec vitae dapibus magna. Nam fringilla in quam eget rhoncus. Vivamus lobortis elit odio, vel mollis ligula pharetra sed. Fusce at nisl eu ipsum mollis ultrices in ac mi. Suspendisse lacus nisi, suscipit at eros id, molestie rutrum arcu. Vivamus in erat nulla. Integer in ullamcorper justo. Donec enim nisl, sagittis eu interdum at, posuere nec erat. Etiam lobortis in nisi et ultrices. Aliquam nec facilisis ipsum. Maecenas ac tellus sed purus viverra fermentum ut eget diam. Integer nec fermentum velit. Morbi auctor sapien id fringilla luctus. Nunc eget turpis mi. Sed sagittis faucibus sagittis. Aenean nec lobortis velit, ut tempor libero. Sed semper ac sapien eu semper. Cras ex orci, fermentum at justo nec, rutrum consectetur nibh. Mauris nec tincidunt lacus. Sed aliquet porta eros, nec gravida quam vehicula nec.</string>
    <string name="branding">Klearn</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="tab_text_1">SIGN IN</string>
    <string name="tab_text_2">REGISTER</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="auth_appbar_header01">Klearn</string>
    <string name="auth_appbar_header02">&#160;- UPSC</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_or_join_klearn_using_social_login">Sign in or Join Klearn using social login.</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="by_joining_klearn_i_agree_to_terms_amp_conditions"><![CDATA[By Joining Klearn, I agree to Terms & Conditions.]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="email_not_verified">Your email id has not been verified yet, please verify your emailId.</string>
    <string name="account_created">Account has been created.</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="default_google_web_clientid">556974069498-c9uam1j6srrgl24er0j3diak4sa5m3vj.apps.googleusercontent.com</string>
    <string name="update_playservice">Please update your Google Play Service.</string>


    <string name="facebook_app_id">256580834872878</string>
    <string name="fb_login_protocol_scheme">fb256580834872878</string>
    <string name="action_home">Home</string>
    <string name="action_objective">Objective</string>
    <string name="action_subjective">Subjective</string>
    <string name="action_mock_exam">Mock Exam</string>
    <string name="action_menu">Menu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_out">LOG OUT</string>
    <string name="view_profile">View Profile</string>
    <string name="home">Home</string>
    <string name="obj_gallery">Objective Gallery</string>
    <string name="sub_gallery">Subjective Gallery</string>
    <string name="exam_center">Exam Center</string>
    <string name="NO_EMAIL_KEY">User emailId key is missing.</string>
    <string name="NO_PASSWORD_KEY">User password key is missing.</string>
    <string name="NO_PHONE_KEY">User phone key is missing.</string>
    <string name="NO_NAME_KEY">User display name key is missing.</string>
    <string name="ACCOUNT_CREATED_SUCCESS">Account successfully created, kindly verify your email before signin.</string>
    <string name="FAILED_FETCHING_ACCOUNT">Failed to fetch account information!</string>
</resources>
