<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/branding_textView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circle_solid_colorsecondary"
        android:fontFamily="@font/lobster_regular"
        android:gravity="center"
        android:text="@string/branding"
        android:textColor="@color/colorTextRegular"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hc_postTitle_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lobster_regular"
        android:text="@string/dummy_text_short"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTextRegular"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/branding_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hc_postBody_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_round_corner_solid"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="4"
        android:padding="6dp"
        android:text="@string/dummy_text_medium"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hc_postTitle_textView" />
</android.support.constraint.ConstraintLayout>